--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
         <link rel="icon" type="image/png" href="sprites/favicon.png" />
         <link rel="apple-touch-icon" href="sprites/iphone_icon.png" />
 
-        <script type="text/javascript" src="js/jquery-2.0.3.min.js"></script>
+        <!--script type="text/javascript" src="js/jquery-2.0.3.min.js"></script-->
+        <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+
+        <link rel="stylesheet" href="js/fancybox/source/jquery.fancybox.css?v=2.1.5" type="text/css" media="screen" />
+        <script type="text/javascript" src="js/fancybox/source/jquery.fancybox.pack.js?v=2.1.5"></script>
+        
         <script type="text/javascript" src="js/createjs-2014.03.12.min.js"></script>
         <script type="text/javascript" src="js/main.js"></script>
         
