--- a/index.html
+++ b/index.html
@@ -37,8 +37,12 @@
                      $(oMain).on("restart", function(evt) {
                              //alert("restart");
                      });
+
+                     //attach the fancybox to the page
+                     $(".fancybox").fancybox();
            });
         </script>
-        <canvas id="canvas" class='ani_hack' width="768" height="1024"> </canvas>
+       
+        <canvas id="canvas" class='ani_hack' width="768" height="1024"> </canvas>   
     </body>
 </html>
