--- a/test.html
+++ b/test.html
@@ -3,16 +3,16 @@
         <img src="http://assets.dice.com/assets/stylesheets/images/DiceSmLogo.png"/>
         <br/>
         <h1>{{messageText}}</h1>
-        <p>{{scoreMessageText}}</p>
-        <p>{{bestScoreMessageText}}</p>
+        <h3>{{scoreMessageText}}</h3>
+        <h3>{{bestScoreMessageText}}</h3>
         <br/>
         <p>You're not very good at this game...</p>
         <p>Maybe you should get a job instead.</p>
         <br/>
-        <ul data-role="listview">
+        <ul class="list-group">
             {{#each searchResults}}
 
-            <li><a href="{{webUrl}}">{{position.title}}</a></li>
+            <li class="list-group-item"><a href="{{webUrl}}">{{position.title}}</a></li>
             {{/each}}
         </ul>
     <div>
